# ship

./: Libraries.7z
src/: CMakeLists.txt  animation.hxx  engine.hxx  imgui.7z  main.cpp  myimgui.h  numbers.hxx  structs.hxx
src/glad/: glad.c  glad.h
src/imgui/: imgui_impl_opengl3.cpp
src/libs/lib/SDL2/: SDL2Targets-release.cmake  SDL2Targets.cmake  SDL2mainTargets.cmake  SDL2staticTargets.cmake
